--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,22 +3,23 @@
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="br" lang="pt"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:a4j="http://richfaces.org/a4j"
-      xmlns:rich="http://richfaces.org/rich"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:a4j="http://richfaces.org/a4j"
+	xmlns:rich="http://richfaces.org/rich"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <h:head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-    <title>JSF2 + Ajax + Tab Panel - Bug Reproducer</title>
+	<title>JSF2 + Ajax + Tab Panel - Bug Reproducer</title>
 </h:head>
 <h:body>
-    <h:form>
-        <div>Hello !! I'm a reproducer.</div>
-        <a4j:commandButton action="#{fooMB.foo()}" title="Open page via Ajax" value="Open page via Ajax" />
-    </h:form>
-    <ui:insert name="content"></ui:insert>
+
+	<rich:tabPanel switchType="client" activeItem="number-1">
+		<rich:tab header="#1" name="number-1">Content #1</rich:tab>
+		<rich:tab header="#2" name="number-2">Content #2</rich:tab>
+		<rich:tab header="#3" name="number-3">Content #3</rich:tab>
+	</rich:tabPanel>
 </h:body>
 </html>
